# GenGlossary

./: .env.example  .gitignore  .ticket-config.yaml  AGENTS.md  README.md  current-ticket.md  main.py  plan-gui-fix.md  plan-gui.md  plan.md  prompt_baseline.txt  prompt_optimization_results.md  pyproject.toml  quality_evaluation_results.md  test_ollama_integration.py
.claude/: CLAUDE.md
.husky/: pre-commit
docs/: architecture.md  cli-usage.md
examples/: sample_architecture.md  sample_glossary_terms.txt
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vitest.config.ts
plans/: cached-stirring-nygaard.md  calm-forging-peach.md  eventual-bubbling-wave.md  fizzy-doodling-moonbeam.md  functional-hopping-puzzle.md  golden-swimming-kite.md  hashed-bubbling-russell.md  hazy-moseying-teapot.md  idempotent-tinkering-torvalds.md  iterative-wondering-dusk.md  majestic-coalescing-pebble.md  memoized-toasting-swan.md  noble-tumbling-hejlsberg.md  optimized-foraging-bubble.md  peaceful-purring-stroustrup.md  polished-dreaming-piglet.md  reflective-petting-widget.md  reflective-wobbling-pumpkin.md  resilient-roaming-fog.md  serene-greeting-lemur.md  smooth-frolicking-key.md  squishy-mixing-ember.md  stateless-puzzling-pillow.md  structured-dazzling-map.md  swirling-dreaming-catmull.md  swirling-popping-kite.md  swirling-singing-seal.md  twinkling-seeking-hollerith.md  unified-wishing-firefly.md  validated-gliding-moonbeam.md  wobbly-spinning-seal.md
scripts/: evaluate_quality.py  measure_prompts.py  ticket.sh
tests/: __init__.py  conftest.py  test_callback.py  test_cancellation_responsiveness.py  test_cli.py  test_cli_api_llm_debug.py  test_cli_db.py  test_cli_db_regenerate.py  test_cli_excluded_term_repo.py  test_cli_project.py  test_config.py  test_config_llm_debug.py  test_document_loader.py  test_glossary_generator.py  test_glossary_refiner.py  test_glossary_reviewer.py  test_integration.py  test_isolate_data_dir.py  test_morphological_analyzer.py  test_ollama_integration.py  test_synonym_pipeline.py  test_synonym_utils.py  test_term_extractor.py  (+4 more)
(+532 files in other folders)
