[project]
name = "genglossary"
version = "0.1.0"
description = "AI-powered glossary generator from documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.12.0",
    "sudachipy>=0.6.10",
    "sudachidict-core>=20251022",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
genglossary = "genglossary.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genglossary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that require external services (e.g., Ollama)",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "respx>=0.21.0",
]
